@@ -33,6 +33,7 @@
 #undef Tcl_ValidateAllMemory
 #undef Tcl_FindHashEntry
 #undef Tcl_CreateHashEntry
+#undef Tcl_Panic
 
 /*
  * WARNING: The contents of this file is automatically generated by the
